Fixed Icon missalignment

--- a/assets/styles/arsenal/_list-item.scss
+++ b/assets/styles/arsenal/_list-item.scss
@@ -101,8 +101,12 @@
     }
 
     .title > .preview {
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 60px;
         height: 60px;
+        
         img {
             max-height: 100%;
             max-width: 100%;
